Updating the README and creating a HISTORY.md to explain where the old commit logs went....

--- a/README
+++ b/README
@@ -1,6 +1,26 @@
 CIHM-Meta
 
-This README hasn't yet been created.
+This is a module used by Canadiana to impliment the metadata bus.
+
+Tools:
+
+* reposync - Keeps 'internalmeta' and 'wipmeta' CouchDB databases current
+             about the public availability of replicas of AIP content
+             in repositories.
+* ditto  - Will be decomissioned soon, used by older version to load
+           METS into CouchDB
+* hammer - reads METS data from the repository and generates a JSON file
+           stored in the 'internalmeta' couchdb database
+* press  - Checks for 'internalmeta' updates and pushes updates to
+           'cosearch' and 'copresentation' databases.
+* solrstream - Streams updates in 'cosearch' CouchDB database to Solr.
+
+* eqod* - tools used to load special 'tag' data from a Heritage related
+          project where EQOD was hired to enter data.
+
+* tdr-sipvalidate - Used when SIP validation rules were updated, and we
+                    wanted to check if the most recent SIP in all existing
+                    AIPs conformed.
 
 
 INSTALLATION
@@ -12,14 +32,18 @@ To install this module, run the following commands:
 	make test
 	make install
 
+We run this module from a Docker image built with
+https://github.com/c7a/cihm-metadatabus
+
 SUPPORT AND DOCUMENTATION
 
+  https://github.com/c7a/CIHM-Meta has an issue tracker which should be
+  used for any questions.
 
-   Canadiana code is moving to GitHub https://github.com/c7a
 
 LICENSE AND COPYRIGHT
 
-Copyright (C) 2017 Russell McOrmond
+Copyright (C) Russell McOrmond, Julienne Pascoe
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of the the Artistic License (2.0). You may obtain a
