Missing link to history.

--- a/README
+++ b/README
@@ -40,6 +40,9 @@ SUPPORT AND DOCUMENTATION
   https://github.com/c7a/CIHM-Meta has an issue tracker which should be
   used for any questions.
 
+  https://github.com/c7a/CIHM-Meta/blob/master/HISTORY.md contains
+  a note about the history of this module.
+
 
 LICENSE AND COPYRIGHT
 
